navbar and breadcrumbs

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse navbar-toggleable-sm bg-primary fixed-top">
+    <nav class="navbar navbar-inverse navbar-toggleable-sm fixed-top">
         <div class="container">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                         <span class="navbar-toggler-icon"></span>
@@ -28,7 +28,7 @@
                         <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
                     </ul> 
                 </div>
-            </div>
+            </div>        
     </nav>
     <header class="jumbotron">
         <div class="container">
@@ -37,7 +37,7 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col col-sm">
+                <div class="col">
                 </div>
             </div>
         </div>
