--- a/aboutus.html
+++ b/aboutus.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse navbar-toggleable-sm bg-primary fixed-top">
+    <nav class="navbar navbar-inverse navbar-toggleable-sm fixed-top">
         <div class="container">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                     <span class="navbar-toggler-icon"></span>
@@ -30,6 +30,7 @@
                 </ul> 
             </div>           
         </div>
+        
     </nav>
     <header class="jumbotron">
         <div class="container">
@@ -43,13 +44,14 @@
             </div>
         </div>
     </header>
-    <ol class="col-12 breadcrumb">
-            <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-            <li class="breadcrumb-item active">About Us</li>
-    </ol>
+    
     <div class="container"> 
         <div class="row">
-            <div>
+                <ol class="col-12 breadcrumb">
+                        <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+                        <li class="breadcrumb-item active">About Us</li>
+                </ol>
+            <div class='col-12'>
                <h3>About Us</h3>
                <hr>
             </div>
