--- a/contactus.html
+++ b/contactus.html
@@ -23,7 +23,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="./index.html">Ristorante Con Fusion</a>
+            <a class="navbar-brand" href="./index.html"><img src="img/logo.png" height="30" width="41"></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -113,7 +113,66 @@
                     <h3>Send us your Feedback</h3>
                 </div>
                 <div class="col-12 col-md-9">
-                    Form goes here
+                    <form>
+                        <div class="form-group row">
+                            <label for="firstname" class="col-md-2 col-form-label">First Name</label>
+                            <div class="col-md-10">
+                                <input type="text" id="firstname" class="form-control" name="firstname" placeholder="first name">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="lastname" class="col-md-2 col-form-label">Last Name</label>
+                            <div class="col-md-10">
+                                <input type="text" id="lastname" class="form-control" name="lastname" placeholder="last name">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="telnum" class="col-12 col-md-2 col-form-label">Contact Tel.</label>
+                            <div class="col-5 col-sm-4 col-md-3">
+                                <div class="input-group">
+                                    <div class="input-group-addon">(</div>
+                                    <input type="tel" id="areacode" class="form-control" name="areacode" placeholder="Area Code">
+                                    <div class="input-group-addon">)</div>
+                                </div>
+                            </div>
+                            <div class="col-7 col-sm-6 col-md-7">
+                                <input type="tel" id="telnum" class="form-control" name="telnum" placeholder="Tel. Number">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="emailid" class="col-md-2 col-form-label">Email</label>
+                            <div class="col-md-10">
+                                <input type="email" id="emailid" class="form-control" name="emailid" placeholder="Email">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="form-check col-md-6 offset-md-2">
+                                <label class="form-check-label">
+                                    <input type="checkbox" class="form-check-input" name="approve" value="">
+                                    <strong>May we call you?</strong>
+                                </label>
+                            </div>
+                            <div class="col-md-3 offset-md-1">
+                                <select class="form-control">
+                                    <option>Tel.</option>
+                                    <option>Email</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                                <label for="feedback" class="col-md-2 col-form-label">Your Feedback</label>
+                                <div class="col-md-10">
+                                    <textarea id="feedback" class="form-control" name="feedback" rows="10"></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="offset-md-2 col-md-10">
+                                    <button type="submit" class="btn btn-primary">
+                                        Send Feedback
+                                    </button>
+                                </div>
+                            </div>
+                    </form>
                 </div>
                 <div class="col-12 col-md">
                 </div>
