--- a/index.html
+++ b/index.html
@@ -49,15 +49,19 @@
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
-                <div class="col-12 col-sm-8">
+                <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking
                         creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col col-sm align-self-center">
+                <div class="col-6 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
                 </div>
+                <div class="col-6 col-sm-3 align-self-center">
+                    <button type="button" class="btn btn-warning btn-sm btn-block">Reserve Table</button>
+                </div>
             </div>
+        </div>
         </div>
     </header>
 
@@ -70,7 +74,10 @@
                 <div class="media">
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="uthappizza">
                     <div class="media-body">
-                        <h2 class="mt-0">Uthappizza</h2>
+                        <h2 class="mt-0">Uthappizza
+                            <span class="badge badge-danger">HOT</span>
+                            <span class="badge badge-pill badge-default">$4.99</span>
+                        </h2>
                         <p class="hidden-xs-down">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives,
                             ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
                     </div>
@@ -80,14 +87,21 @@
 
 
         <div class="row row-content align-items-center">
-            <div class="col-sm-4 col-md-3 flex-last">
+            <div class="col-sm-4 col-md-3 flex-first">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div class="col-sm col-md flex-first">
-                <h2>Weekend Grand Buffet</h2>
-                <p class="hidden-xs-down">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six
-                    main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per
-                    person </p>
+            <div class="col-sm col-md flex-last">
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet
+                            <span class="badge badge-danger">NEW</span>
+                        </h2>
+                        <p class="hidden-xs-down">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers,
+                            six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just
+                            $19.99 per person </p>
+                    </div>
+                    <img class="d-flex ml-3 img-thumbnail align-self-center" src="img/buffet.png" alt="buffet">
+                </div>
             </div>
         </div>
 
@@ -97,8 +111,7 @@
             </div>
             <div class="col-sm col-md flex-first">
                 <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" 
-                    src="img/alberto.png" alt="alberto">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png" alt="alberto">
                     <div class="media-body">
                         <h2 class="mt-0">Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
@@ -106,6 +119,22 @@
                             whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion
                             experiences. </p>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="row row-content align-items-center">
+            <div class="card col-12 col-sm-8 align-self-center">
+                <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                <div class="card-block">
+                    <form>
+                        <div class="form-group-row">
+                            <label for="guest" class="col-12 col-sm-2 col-form-label">Number of Guests</label>
+                            
+                        </div>
+                        <div class="form-group-row"></div>
+                        <div class="form-group-row"></div>
+                    </form>
+
                 </div>
             </div>
         </div>
