--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-6 col-sm-3 align-self-center">
-                    <button type="button" class="btn btn-warning btn-sm btn-block">Reserve Table</button>
+                    <button type="button" class="btn btn-warning btn-sm btn-block" onclick="location.href='#reservationform'">Reserve Table</button>
                 </div>
             </div>
         </div>
@@ -122,21 +122,72 @@
                 </div>
             </div>
         </div>
-        <div class="row row-content align-items-center">
-            <div class="card col-12 col-sm-8 align-self-center">
+        <div class="row row-content">
+            <div class="col-12 col-md-8 offset-md-2">
+            <div class="card">
                 <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
                 <div class="card-block">
-                    <form>
-                        <div class="form-group-row">
-                            <label for="guest" class="col-12 col-sm-2 col-form-label">Number of Guests</label>
-                            
+                    <form id="reservationform">
+                        <div class="form-group row">
+                            <label for="guest" class="col-12 col-md-2 col-form-label">Number of Guests</label>
+                            <div class="col col-md-10 ">
+                                <div class="form-check form-check-inline">
+                                    <label class="form-check-label">
+                                        <input class="form-check-input" type="radio" name="guest" value="option1">1  
+                                    </label>
+                                </div>                            
+                                <div class="form-check form-check-inline">
+                                    <label class="form-check-label">
+                                        <input class="form-check-input" type="radio" name="guest" value="option2">2
+                                    </label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <label class="form-check-label">
+                                        <input class="form-check-input" type="radio" name="guest" value="option4">4 
+                                    </label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <label class="form-check-label">
+                                        <input class="form-check-input" type="radio" name="guest" value="option5">5  
+                                    </label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <label class="form-check-label">
+                                        <input class="form-check-input" type="radio" name="guest" value="option6">6  
+                                    </label>
+                                </div>
+                            </div>
                         </div>
-                        <div class="form-group-row"></div>
-                        <div class="form-group-row"></div>
+                        <div class="form-group row">
+                            <label for="bookingdate" class="col-12 col-md-2 col-form-label">Date and Time</label>
+                            <div class="col-6 col-md-5">
+                                <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="fa fa-calendar"></i>
+                                    </span>
+                                    <input type="date" name="bookingdate" id="bookingdate">
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-5">
+                                <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="fa fa-clock-o"></i>
+                                    </span>
+                                    <input type="time" name="bookingtime" id="bookingtime">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="offset-md-2 col-md-10">
+                                <button type="submit" class="btn btn-primary">
+                                    Reserve
+                                </button>
+                            </div>
+                        </div>
                     </form>
-
                 </div>
             </div>
+        </div>
         </div>
     </div>
 
